--- a/packages/kinvey-nativescript-sdk/package.json
+++ b/packages/kinvey-nativescript-sdk/package.json
@@ -9,7 +9,7 @@
   "main": "kinvey-nativescript-sdk.js",
   "typings": "kinvey.d.ts",
   "dependencies": {
-    "nativescript-sqlite": "~1.1.11",
+    "nativescript-sqlite": "2.0.1",
     "rxjs": "~5.5.5"
   },
   "scripts": {
